--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 .kotlin
 
 ### IntelliJ IDEA ###
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -12,6 +13,7 @@ target/
 *.iws
 *.iml
 *.ipr
+out/
 
 ### Eclipse ###
 .apt_generated
@@ -37,3 +39,13 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+
+# Package files
+*.jar
+*.war
+*.ear
+
+# Backup files
+*.bak
+*.tmp
